welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:14: error: not found: value droiet
	droiet();
        ^